@@ -38,6 +38,8 @@ Zope Changes
 
     Bugs Fixed
 
+      - Replaced all transaction.commit(1) calls by  transaction.savepoint() 
+
       - Collector #1832: UnIndex swallowed ConflictErrors.
 
       - Collector #1815: ZCTextIndex accepts (again) sequences of strings to 
